--- a/DatingApp/DatingApp/Base.lproj/LaunchScreen.storyboard
+++ b/DatingApp/DatingApp/Base.lproj/LaunchScreen.storyboard
@@ -15,8 +15,19 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="1200x600wa" translatesAutoresizingMaskIntoConstraints="NO" id="x1y-Tv-swe">
+                                <rect key="frame" x="0.0" y="47" width="390" height="763"/>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="x1y-Tv-swe" secondAttribute="bottom" id="7po-uJ-010"/>
+                            <constraint firstItem="x1y-Tv-swe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="CUj-xt-8xx"/>
+                            <constraint firstAttribute="trailing" secondItem="x1y-Tv-swe" secondAttribute="trailing" id="if0-D2-208"/>
+                            <constraint firstItem="x1y-Tv-swe" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="wRa-2M-60t"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -25,6 +36,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="1200x600wa" width="1200" height="600"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
